# datatidy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_REVIEW_SUMMARY.md  FALLBACK_SYSTEM_GUIDE.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PUBLISH_GUIDE.md  README.md  SPHINX_DOCUMENTATION_SUMMARY.md  SYSTEM_BENCHMARK_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml  ci.yml  publish.yml
benchmarks/: performance_benchmark.py  quick_benchmark.py  system_benchmark.py
datatidy/: __init__.py  cli.py  core.py  join_engine.py
datatidy/config/: __init__.py  parser.py  schema.py
datatidy/fallback/: __init__.py  logger.py  metrics.py  processor.py
datatidy/input/: __init__.py  readers.py
datatidy/transformation/: __init__.py  column_operations.py  dependency_resolver.py  engine.py  expressions.py
docs/: README.md  architecture.md  build_docs.sh  conf.py  configuration.md  index.rst  installation.rst  performance.rst  quickstart.rst
docs/_static/: custom.css
docs/api/: config.rst  core.rst  fallback.rst
examples/: README.md  advanced_column_operations.yaml  advanced_lag_example.yaml  advanced_operations_dependency_example.yaml  basic_dependency_example.yaml  circular_dependency_example.yaml  complex_dependency_example.yaml  database_config.yaml  dependency_aware_config.yaml  dependency_examples.py  example_multi_input_usage.py  example_usage.py  excel_config.yaml  execution_plan_debug_example.yaml  fallback_config_example.yaml  fallback_demo.py  interim_columns_filter_example.yaml  lag_chain_combinations.yaml  lag_chain_examples.py  lag_operations_example.yaml  lag_operations_examples.py  lambda_examples.py  multi_input_config.yaml  sample_config.yaml  simple_join_config.yaml  suffix_behavior_demo.yaml
tests/: __init__.py  test_config_parser.py  test_core.py  test_expressions.py  test_fallback.py  test_readers.py  test_transformation_engine.py
